--- a/style.css
+++ b/style.css
@@ -42,7 +42,6 @@ p {
   font-size: 14px;
   line-height: 1.6em;
   font-weight: 200;
-
 }
 
 ul {
@@ -76,24 +75,50 @@ hr { width: 150px; margin: 40px 0; }
   color: #FFF;
   width: 160px;
 }
-
-
 /*---- GENERAL - END ----*/
 
-/* ---- NAVIGATION MOBILE ---- */
-.nav-mobile { display:none; width: 100vw; position:fixed; top:0; left:0; right:0; bottom:0; z-index:200; cursor: pointer; font-size: 20px; margin: 0; text-transform: uppercase; letter-spacing: 2px; font-weight: 200; }
-.nav-mobile-container { align-items: center; min-width: 375px; height: 100%; overflow: hidden; background-color: #FFF; text-align: center;}  
+/* ---- NAVIGATION ---- */
+.nav-mobile { 
+  display:none;
+  width: 100vw;
+  position:fixed;
+  top:0;
+  left:0;
+  right:0;
+  bottom:0;
+  z-index:600;
+  cursor: pointer;
+  font-size: 20px;
+  margin: 0;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-weight: 200;
+}
+.nav-mobile-container { 
+  align-items: center;
+  min-width: 375px;
+  height: 100%;
+  overflow: hidden;
+  background-color: #FFF;
+  text-align: center;
+}  
 nav { margin-top: -20px;}
 .nav-mobile h4 {color: var(--brown-color) }
-nav a { font-family: var(--menu-font); text-transform: uppercase; letter-spacing: 2px; font-size: 32px; }
-
+nav a { 
+  font-family: var(--menu-font);
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  font-size: 32px;
+  transition: all 0.3s ease-in-out;
+ }
+nav a:hover { color: var(--brown-color); }
 .logo { margin: 45px 0; }
 .links svg { padding-right: 20px; }
 .mailto { margin: 20px 0; }
 .mailto a { font-family: var(--menu-font); font-size: 18px; border-bottom: 1px solid rgba(0, 0, 0, 0.25); padding-bottom: 15px; }
 .close-nav { display:inline-block; position:fixed; z-index:100; top:50px; right:30px; }
 .nav-mobile li { margin: 45px 0; }
-/* ---- NAV MOBILE - END ---- */
+/* ---- NAVIGATION - END ---- */
 
 /* ---- STRUCTURE ---- */
 header,
@@ -117,12 +142,36 @@ header {
   height: 50px;
   width: 100%;
   z-index: 100;
-  background: transparent;
   align-items: center;
-  justify-content: center;margin-top: 10px; }
+  justify-content: center;
+  margin-top: 10px;
+}
 .menu { position: fixed; width: 22px; height: 22px; z-index: 100; top: 20px; left: 30px; cursor: pointer; }
-.header-logo img { height: 44px; }
-.header-vertical { display: none; }
+.header-logo svg { height: 44px; }
+.menu svg { fill: var(--white-color); transition: all 0.5s ease-in-out;  }
+.menu-black svg { fill: #000; padding: 5px; }
+.menu svg:hover { fill: var(--brown-color); rotate: 180deg; }
+
+.header-logo-black,
+.menu-black,
+.header-vertical,
+.header-btn,
+.header-btn a,
+.none { display: none; }
+
+.active { display: block; }
+.scroll {
+  display: flex;
+  align-items: center;
+  position: fixed;
+  width: 100%;
+  height: 80px;
+  background-color: var(--white-color);
+  color: #000;
+  margin: 0;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25)
+}
+.header-logo-black svg { height: 44px; }
 /*---- HEADER - END ----*/
 
 /*---- HOME ----*/
@@ -154,6 +203,7 @@ header {
 /*---- CHAMBRES ----*/
 #rooms p { width: 330px; }
 .slider-container { width: 100%; height: 170px; }
+.slider-container img { width: 100%; height: 100%; object-fit: cover; }
 .slider-container div { height: 100%; }
 /*---- CHAMBRES - END ----*/
 
@@ -259,7 +309,6 @@ footer {
   padding-bottom: 20px;
   text-align: center;
 }
-
 footer img { width: 30px;}
 footer h3 { font-size: 16px; line-height: 0.9; text-transform: uppercase; letter-spacing: 2px; font-weight: 400; margin: 0; color: var(--brown-color)}
 footer ul { display: inline-flex; }
@@ -269,9 +318,32 @@ footer svg  { width: 5px; fill: var(--brown-color); padding: 0 2px; }
 
 /*---- MEDIA QUERIES ----*/
 @media screen and (min-width: 767px) {
-  h1 { font-size: 90px; }
+
+  /*---- HEADER ----*/
+  .header-btn {
+    position: fixed;
+    right: 40px;
+    top: 20px;
+    border: solid 1px #000;
+    transition: all 0.5s ease-in-out;
+  }
+  .header-btn a {
+    display: block;
+    font-size: 12px;
+    font-weight: 400;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    text-align: center;
+    padding: 15px 30px;
+    transition: all 0.5s ease-in-out;
+  }
+  .header-btn:hover { background-color: #000; }
+  .header-btn a:hover { color: #FFF; }
+  /*---- HEADER - END ----*/
+
   /*---- HOME ----*/
   #home p { font-size: 16px;}
+  h1 { font-size: 90px; }
   .home-container { justify-content: center; }
   .home-content { margin-bottom: 0; }
   .home-btn { bottom: 280px; right: 110px; }
@@ -304,6 +376,7 @@ footer svg  { width: 5px; fill: var(--brown-color); padding: 0 2px; }
 }
 
 @media screen and (min-width: 1920px) {
+  
   .header-vertical { 
     position: absolute; 
     display: block;
@@ -342,7 +415,7 @@ footer svg  { width: 5px; fill: var(--brown-color); padding: 0 2px; }
     top: 187%;
     right: 0;
     z-index: 0;
-   }
+  }
   #services p { width: 450px; height: 220px; text-align: justify; }
   #services .video { margin: -50px 0 0 20%; z-index: 500; }
   .gallery-bloc { width: 280px; height: 37px; margin: 0 0 0 985px; z-index: 500;  }
@@ -374,4 +447,5 @@ footer svg  { width: 5px; fill: var(--brown-color); padding: 0 2px; }
     footer svg { width: 12px; }
     /*---- FOOTER - END ----*/
 }
+
 /*---- MEDIA QUERIES - END ----*/
